logs/validate.20260408-060223.log
Mode: isolate
<<<<<<< HEAD
Isolate: including Chap19 Chap28 Chap02
error: unexpected token, expected `;`
   --> src/Chap28/MaxContigSubSumDivConStEph.rs:257:13
    |
257 |             implies
    |             ^^^^^^^

error[E0432]: unresolved import `crate::Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph::lemma_divcon_combine`
  --> src/Chap28/MaxContigSubSumDivConMtEph.rs:25:9
   |
25 |     use crate::Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph::lemma_divcon_combine;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_divcon_combine` in `Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 25265MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
=======
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
verification results:: 1958 verified, 0 errors
Elapsed: 22s
Sampled Memory Usage: peak rust_verify RSS: 3295MB, peak z3 RSS: 633MB, min free: 23008MB
Sampled CPU Usage: rust_verify: 48s, z3 children: 48s
>>>>>>> agent4/ready
